# Plazza

./: .gitignore  CMakeLists.txt  configure.sh  coverage.info  coverage_filtered.info  index-sort-f.html  index-sort-l.html  index.html  main.cpp
.github/workflows/: c-cpp.yml
coverage_html/: index-sort-f.html  index-sort-l.html  index.html
coverage_html/13/: index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-c.html  initializer_list.func.html  initializer_list.gcov.html  new.func-c.html  new.func.html  new.gcov.html  tuple.func-c.html  tuple.func.html  tuple.gcov.html
coverage_html/13/bits/: alloc_traits.h.func-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  ios_base.h.func-c.html  ios_base.h.func.html  ios_base.h.gcov.html  move.h.func-c.html  move.h.func.html  move.h.gcov.html  new_allocator.h.func-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  shared_ptr.h.func-c.html  shared_ptr.h.func.html  shared_ptr.h.gcov.html  shared_ptr_base.h.func-c.html  shared_ptr_base.h.func.html  shared_ptr_base.h.gcov.html  stl_algobase.h.func-c.html  stl_algobase.h.func.html  stl_algobase.h.gcov.html  stl_construct.h.func-c.html  (+35 more)
coverage_html/13/ext/: aligned_buffer.h.func-c.html  aligned_buffer.h.func.html  aligned_buffer.h.gcov.html  alloc_traits.h.func-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  atomicity.h.func-c.html  atomicity.h.func.html  atomicity.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  string_conversions.h.func-c.html  string_conversions.h.func.html  string_conversions.h.gcov.html
coverage_html/usr/include/gtest/: gtest-assertion-result.h.func-c.html  gtest-assertion-result.h.func.html  gtest-assertion-result.h.gcov.html  gtest-message.h.func-c.html  gtest-message.h.func.html  gtest-message.h.gcov.html  gtest-param-test.h.func-c.html  gtest-param-test.h.func.html  gtest-param-test.h.gcov.html  gtest-printers.h.func-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest.h.func-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/usr/include/gtest/internal/: gtest-internal.h.func-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-param-util.h.func-c.html  gtest-param-util.h.func.html  gtest-param-util.h.gcov.html  gtest-port.h.func-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/usr/include/x86_64-linux-gnu/c++/13/bits/: c++config.h.func-c.html  c++config.h.func.html  c++config.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
include/: Kitchen.hpp  Kitchen.hpp.func-c.html  Kitchen.hpp.func.html  Kitchen.hpp.gcov.html  Pizza.hpp  Plazza.hpp  Reception.hpp  Reception.hpp.func-c.html  Reception.hpp.func.html  Reception.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  usage.hpp
include/utils/: utils.hpp
src/: Kitchen.cpp  Kitchen.cpp.func-c.html  Kitchen.cpp.func.html  Kitchen.cpp.gcov.html  Pizza.cpp  Pizza.cpp.func-c.html  Pizza.cpp.func.html  Pizza.cpp.gcov.html  Plazza.cpp  Reception.cpp  Reception.cpp.func-c.html  Reception.cpp.func.html  Reception.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  usage.cpp  usage.cpp.func-c.html  usage.cpp.func.html  usage.cpp.gcov.html
src/utils/: index-sort-f.html  index-sort-l.html  index.html  utils.cpp  utils.cpp.func-c.html  utils.cpp.func.html  utils.cpp.gcov.html
test/: test_Kitchen.cpp  test_Pizza.cpp  test_Reception.cpp  test_usage.cpp
test/integration/: test_create_kitchen.cpp  test_fork_fd.cpp
test/utils/: test_utils.cpp
(+6 files in other folders)
